--- a/Templates/base.html
+++ b/Templates/base.html
@@ -18,10 +18,38 @@
       </a>
       <ul class="navbar-nav">
         <li class="nav-item">
+          <a class="nav-link " href="{% url 'categorias_view' %}">Categorias</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="{% url 'marcas_view' %}">Marcas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="{% url 'productos_view' %}">Productos</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link " href="{% url 'about_view' %}">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'contacto_view' %}">Contacto</a>
+        </li>
+
+        
+        {% if request.user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'logout_view' %}">Logout</a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'login_view' %}">Login</a>
+        </li>
+        {% endif %}
+          
+
+        
+        
+
+        <li class="nav-item">
+          <a class="nav-link" href="">{{request.user.username}}</a>
         </li>
       </ul>
     </div>
